<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/ic_menu_compass"
            android:title="@string/compass"
            android:titleTextColor="@color/colorPrimary"
            />

        <item
            android:id="@+id/nav_missions"
            android:icon="@drawable/ic_menu_missions"
            android:title="@string/missions"
            android:titleTextColor="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_beer_now"
            android:icon="@drawable/ic_menu_beer_now"
            android:title="@string/beer_now"
            android:titleTextColor="@color/colorPrimary"/>
        <item
            android:id="@+id/nav_google_maps_route"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/open_in_google_maps"
            android:titleTextColor="@color/colorPrimary"/>
        <item
            android:id="@+id/open_drunkify"
            android:icon="@drawable/ic_menu_drunkify"
            android:title="@string/open_drunkify"
            android:titleTextColor="@color/colorPrimary"/>

    </group>

</menu>
